# CycleGAN-I2I-weather-transformation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  environment.yaml  examine.py  experimentSchedule.json  extractor.py  inference.py  inference_paired.py  inference_unpaired.py  main.py  pyproject.toml  requirements.txt  segment_batch.py  segmentor.py  solver.py  train.py
data/: joint.py
feamgan/: README.md
feamgan/Docker/: Dockerfile_MSeg
helpers/: setup.sh
options/: parser.py
src/: cyclegan_turbo.py  inference_paired.py  inference_unpaired.py  model.py  train_cyclegan_turbo.py
src/my_utils/: dino_struct.py
src/weathergan/: model.py
src/weathergan/curve/: test.py  train.py
src/weathergan/curve/data/: datasets.py
src/weathergan/curve/models/: interactive_model.py  model.py
src/weathergan/curve/scripts/: generate_naming_maps.py
src/weathergan/curve/utils/: evaluator.py
src/weathergan/feamgan/: data_structure_converter.py
src/weathergan/feamgan/Controller_Component/: Controller.py
src/weathergan/feamgan/Experiment_Component/: AModelSuit.py  ExperimentScheduler.py
src/weathergan/feamgan/Logger_Component/: SLoggerHandler.py
src/weathergan/feamgan/datasetPreperation/: convertSegmentations.py  createBDDSubsets.py  createDatasetSubsetSubset.py  createMSegSegmentations.py  downloadAndExtractCityscapes.py  extractBDD.py  extractPFD.py  extractVIPER.py
src/weathergan/feamgan/eval/: convertPFDResults.py  kvdEval.py  quickEval.py  randomlySampleResults.py
src/weathergan/feamgan/utils/: semanticSegmentationUtils.py  visualizationUtils.py
src/weathergan/mseg/dataset_apis/: Ade20kMaskLevelDataset.py  BDDImageLevelDataset.py  COCOPanopticJsonMaskDataset.py  COCOSemanticAPI.py  JsonMaskLevelDataset.py  MapillaryMaskDataset.py  SunrgbdImageLevelDataset.py
src/weathergan/mseg/label_preparation/: dataset_update_records.py  dump_coco_semantic_labels.py  dump_idd_semantic_labels.py  mseg_dump_pascalcontext_pngs.py  mseg_write_relabeled_segments.py  relabeled_data_containers.py  remap_dataset.py
src/weathergan/mseg/taxonomy/: naive_taxonomy_converter.py  taxonomy_converter.py
src/weathergan/my_utils/: dino_struct.py  training_utils.py
src/weathergan/turbo/: cyclegan_turbo.py  train_cyclegan_turbo.py  train_pix2pix_turbo.py
(+46 files in other folders)
