[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[project]
name = "WeatherGan"
version = "0.0.1" # should be dynamic later on
description = "Weather Gan application"
requires-python = ">=3.10"
authors = [
    { name = "Philip Cho", email = "chophilip21@gmail.com" },
]

[project.optional-dependencies]
devel = [
    "scikit-video==1.1.11",
    "termcolor==2.3.0",
    "scipy",
    "pandas",
    "torch-fidelity",
    "moviepy",
    "imageio",
    "wandb",
    "opencv-python",
    "pillow",
    "tqdm",
    "hydra-core",
    "typing_extensions",
    "PyYAML",
    "matplotlib",
    "numpy==1.24.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weathergan"]

[tool.hatch.build.targets.sdist]
include = [
]